# DP-XO

./: CMakeLists.txt  main.cpp  vcpkg.json
Console/: main.cpp
Google_tests/: CMakeLists.txt  test1.cpp  tests2.cpp
Logic/: CMakeLists.txt
Logic/Headers/: Board.h  Computer.h  Game.h  IGame.h  IGameListener.h  Player.h
Logic/Sources/: Board.cpp  Computer.cpp  Game.cpp  Player.cpp
SFML/doc/html/: AlResource_8hpp_source.html  BlendMode_8hpp_source.html  CircleShape_8hpp_source.html  Clipboard_8hpp_source.html  Clock_8hpp_source.html  Color_8hpp_source.html  Config_8hpp_source.html  ContextSettings_8hpp_source.html  Context_8hpp_source.html  ConvexShape_8hpp_source.html  Cursor_8hpp_source.html  Drawable_8hpp_source.html  Err_8hpp_source.html  Event_8hpp_source.html  FileInputStream_8hpp_source.html  Font_8hpp_source.html  Ftp_8hpp_source.html  GlResource_8hpp_source.html  Glsl_8hpp_source.html  Glyph_8hpp_source.html  Http_8hpp_source.html  Image_8hpp_source.html  InputSoundFile_8hpp_source.html  InputStream_8hpp_source.html  IpAddress_8hpp_source.html  Joystick_8hpp_source.html  Keyboard_8hpp_source.html  Listener_8hpp_source.html  Lock_8hpp_source.html  MemoryInputStream_8hpp_source.html  Mouse_8hpp_source.html  Music_8hpp_source.html  Mutex_8hpp_source.html  NativeActivity_8hpp_source.html  NonCopyable_8hpp_source.html  OutputSoundFile_8hpp_source.html  Packet_8hpp_source.html  PrimitiveType_8hpp_source.html  Rect_8hpp_source.html  RectangleShape_8hpp_source.html  (+334 more)
UI/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
XO/: CMakeLists.txt
cmake_modules/: FindSFML.cmake
headers/: Engine.hpp
src/: Engine.cpp  Game.cpp  Game.h  UI.cpp  UI.h  main.cpp
src/Headers/: Board.h  Computer.h  Game.h  Player.h  TicTacToe.h  UI.h
src/Sources/: Board.cpp  Computer.cpp  Game.cpp  Player.cpp  TicTacToe.cpp  UI.cpp
